--- a/code/TX_dw_collection.Rmd
+++ b/code/TX_dw_collection.Rmd
@@ -230,7 +230,7 @@ ggsave("./results/qa_qc/pop_violation_plot.png", pop_violations)
 ```
 
 _______________________________________________________________________________
-Start of TX-specific data collection: 
+Start of TX-specific data collection code: 
 _______________________________________________________________________________
 Merging & Organizing Datasets Available Only in TX
 ```{r}
@@ -470,47 +470,31 @@ historic_use <- do.call(rbind, year_use_estimates) %>%
 
 ## Water loss audits: https://www.twdb.texas.gov/conservation/municipal/waterloss/historical-annual-report.asp
 # downloaded Jan 24 2024
-## This requires merging in downloaded file, looping over to cleaning and then merge.
+## This requires merging in downloaded file, looping over to cleaning and then merge - 
+# code added below when loading all of the data
 
-# vector of cleaned column names 
-waterlosscolnames <- c("Name of Utility",
-               "Real Loss GMD (<32 conn/mi)",
-               "Real Loss GCD",
-               "Apparent Loss GCD",
-                "Water Loss GCD",
-               "ILI (>= 3,000 connections)", 
-                "Total GPCD", 
-               "GPCD Loss",
-               "Real Loss Cost in dollars",
-               "Apparent Loss Cost in dollars","Year")
 
-#making empty dataframe 
-waterloss_all <- setNames(data.frame(matrix(ncol = length(waterlosscolnames), nrow = 0)), waterlosscolnames)
-
-year <- 2010 
-
-# ! edit this when adding additional years 
-stopyear <- 2022 
-
-while(year <= stopyear)
-{
-print(year)
-waterloss_raw <- aws.s3::s3read_using(read_csv, 
-                               object = paste0("s3://tech-team-data/state-drinking-water/TX/raw/TCEQ_Loss_Audits/SummaryAuditsByCategory_",year,".csv"))
-
-waterloss <- waterloss_raw %>%
-             select(1:10)
-
-colnames(waterloss) <- waterlosscolnames
-
-waterloss <- waterloss %>%
-             janitor::clean_names()%>%
-             filter(name_of_utility != "UtilityName")%>%
-             mutate(Year = year)
-
-waterloss_all <- rbind(waterloss_all,waterloss)
-year <- year + 1
-}
+## 2022 TX State Water Plan: https://2022.texasstatewaterplan.org/statewide?
+# downloaded Jan 29 2024
+pop <- read.csv("https://2022.texasstatewaterplan.org/download/statewide/population") %>%
+  janitor::clean_names()
+demands <- read.csv("https://2022.texasstatewaterplan.org/download/statewide/demands") %>%
+  janitor::clean_names()
+supp <- read.csv("https://2022.texasstatewaterplan.org/download/statewide/supplies") %>%
+  janitor::clean_names()
+needs <- read.csv("https://2022.texasstatewaterplan.org/download/statewide/needs") %>%
+  janitor::clean_names()
+strat <- read.csv("https://2022.texasstatewaterplan.org/download/statewide/strategies") %>%
+  janitor::clean_names()
+# writing to aws: 
+# tmp <- tempfile()
+# write.csv(strat, file = paste0(tmp, ".csv"))
+# on.exit(unlink(tmp))
+# put_object(
+#   file = paste0(tmp, ".csv"),
+#   object = "/state-drinking-water/TX/raw/TX_2022_SWP/strat.csv",
+#   bucket = "tech-team-data",
+# )
 ```
 
 Financial
@@ -547,7 +531,7 @@ east_TX <- read.csv("./data/raw/east_TX_counties.csv") %>%
 ```
 
 _______________________________________________________________________________
-Loading all data for TX & organizing into a list:
+Loading all data for TX:
 _______________________________________________________________________________
 ```{r}
 ## National datasets: ##########################################################
@@ -688,6 +672,57 @@ historic_use_estimates <-  aws.s3::s3read_using(read.csv,
                                                 object = "s3://tech-team-data/state-drinking-water/TX/raw/TX_historic_use_estimates.csv")
 
 # water loss audits
+# vector of cleaned column names 
+waterlosscolnames <- c("Name of Utility",
+                       "Real Loss GMD (<32 conn/mi)",
+                       "Real Loss GCD",
+                       "Apparent Loss GCD",
+                       "Water Loss GCD",
+                       "ILI (>= 3,000 connections)", 
+                       "Total GPCD", 
+                       "GPCD Loss",
+                       "Real Loss Cost in dollars",
+                       "Apparent Loss Cost in dollars","Year")
+
+#making empty dataframe 
+waterloss_all <- setNames(data.frame(matrix(ncol = length(waterlosscolnames), nrow = 0)), waterlosscolnames)
+
+year <- 2010 
+
+# ! edit this when adding additional years 
+stopyear <- 2022 
+
+while(year <= stopyear)
+{
+print(year)
+waterloss_raw <- aws.s3::s3read_using(read_csv, 
+                               object = paste0("s3://tech-team-data/state-drinking-water/TX/raw/TCEQ_Loss_Audits/SummaryAuditsByCategory_",year,".csv"))
+
+waterloss <- waterloss_raw %>%
+             select(1:10)
+
+colnames(waterloss) <- waterlosscolnames
+
+waterloss <- waterloss %>%
+             janitor::clean_names()%>%
+             filter(name_of_utility != "UtilityName")%>%
+             mutate(Year = year)
+
+waterloss_all <- rbind(waterloss_all,waterloss)
+year <- year + 1
+}
+
+# Texas water state plan: 
+TX_swp_pop <- aws.s3::s3read_using(read.csv,
+                                   object =  "s3://tech-team-data/state-drinking-water/TX/raw/TX_2022_SWP/population.csv")
+TX_swp_demands <- aws.s3::s3read_using(read.csv,
+                                   object =  "s3://tech-team-data/state-drinking-water/TX/raw/TX_2022_SWP/demands.csv")
+TX_swp_supp <- aws.s3::s3read_using(read.csv,
+                                   object =  "s3://tech-team-data/state-drinking-water/TX/raw/TX_2022_SWP/supplies.csv")
+TX_swp_needs <- aws.s3::s3read_using(read.csv,
+                                   object =  "s3://tech-team-data/state-drinking-water/TX/raw/TX_2022_SWP/needs.csv")
+TX_swp_strategies <- aws.s3::s3read_using(read.csv,
+                                   object =  "s3://tech-team-data/state-drinking-water/TX/raw/TX_2022_SWP/strategies.csv")
 
 
 ## Financial 
@@ -702,8 +737,12 @@ TX_PPL <- aws.s3::s3read_using(read.csv,
 # water affordability: 
 water_aff <- aws.s3::s3read_using(read.csv, 
                                object = "s3://tech-team-data/state-drinking-water/TX/raw/TX_water_affordability.csv") 
+```
 
-## Combining into a list: ######################################################
+_______________________________________________________________________________
+Organizing data into a list:
+_______________________________________________________________________________
+```{r}
 # TX_data <- list()
 # TX_data[[1]] <- sab_census
 # TX_data[[2]] <- sdwis_tidy
